FCREPO-984: Fedora fails to start when specifying relative paths for fedora.home and Spring configuration params
The Tomcat context container (fcrepo-installer/src/main/resources/context.xml) 
now only defines the "fedora.home" parameter.

The contextConfigLocation and propertyConfigLocation 
parameters are now defined in Fedora's web.xml as 
context-params.

This allows us to keep the fedora.war static and the 
container need only provide the fedora.home parameter.

Also removed the now extraneous fedora.home init-param
defined as part of the ControlServlet in web.xml

https://jira.duraspace.org/browse/FCREPO-984

--- a/fcrepo-webapp/fcrepo-webapp-fedora/src/main/webapp/WEB-INF/web.xml
+++ b/fcrepo-webapp/fcrepo-webapp-fedora/src/main/webapp/WEB-INF/web.xml
@@ -10,6 +10,14 @@
     <listener>
       <listener-class>org.fcrepo.server.utilities.CleanupContextListener</listener-class>
     </listener>
+    <context-param>
+      <param-name>contextConfigLocation</param-name>
+      <param-value>/WEB-INF/applicationContext.xml,file:${fedora.home}/server/config/spring/web/*.xml</param-value>
+    </context-param>
+    <context-param>
+      <param-name>propertyConfigLocation</param-name>
+      <param-value>file:${fedora.home}/server/config/spring/web/web.properties</param-value>
+    </context-param>
     <servlet>
       <display-name>Apache-Axis Servlet</display-name>
       <servlet-name>AxisServlet</servlet-name>
@@ -26,10 +34,6 @@
       status)</display-name>
       <servlet-name>ControlServlet</servlet-name>
       <servlet-class>org.fcrepo.server.ServerController</servlet-class>
-      <init-param>
-        <param-name>fedora.home</param-name>
-        <param-value>/tmp/fcrepo</param-value>
-      </init-param>
       <load-on-startup>2</load-on-startup>
     </servlet>
     <servlet>
