Axis 1.3 removed from the server-side. Modules which use axis on the client are now removed from the build process until they will be cxf compliant.

--- a/fcrepo-client/pom.xml
+++ b/fcrepo-client/pom.xml
@@ -22,7 +22,7 @@
   	</dependency>
   </dependencies>
   <modules>
-    <module>fcrepo-client-admin</module>
+    <!-- <module>fcrepo-client-admin</module> -->
     <module>fcrepo-client-messaging</module>
   </modules>
 </project>
