--- a/fcrepo-integrationtest/fcrepo-integrationtest-core/pom.xml
+++ b/fcrepo-integrationtest/fcrepo-integrationtest-core/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>org.fcrepo</groupId>
     <artifactId>fcrepo-integrationtest</artifactId>
-    <version>3.5-SNAPSHOT</version>
+    <version>3.5</version>
   </parent>
 
   <artifactId>fcrepo-integrationtest-core</artifactId>
