--- a/fcrepo-webapp/fcrepo-webapp-imagemanip/pom.xml
+++ b/fcrepo-webapp/fcrepo-webapp-imagemanip/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.fcrepo</groupId>
     <artifactId>fcrepo-webapp</artifactId>
-    <version>3.5-SNAPSHOT</version>
+    <version>3.5</version>
   </parent>
 
   <artifactId>fcrepo-webapp-imagemanip</artifactId>
