FCREPO-238: APIM.ingest() creates objects with wrong last modification
https://jira.duraspace.org/browse/FCREPO-238

--- a/fcrepo-integrationtest/fcrepo-integrationtest-configA/pom.xml
+++ b/fcrepo-integrationtest/fcrepo-integrationtest-configA/pom.xml
@@ -340,8 +340,8 @@
                 <include>**/SharedDeploymentTests.class</include>
                 <include>**/ContentModelDSInputTest.class</include>
                 <include>**/TestAdminAPI.class</include>
-
-                <!-- Disabled until FCREPO-798 is public <include>**/TestAPIM2.class</include> -->
+                <include>**/TestObjectLastModDate.class</include>
+                 <!-- Disabled until FCREPO-798 is public <include>**/TestAPIM2.class</include> -->
 
               </includes>
 
