final Maven cleanings

--- a/pom.xml
+++ b/pom.xml
@@ -337,23 +337,6 @@
         <version>1.2</version>
         <classifier>melcoe</classifier>
       </dependency>
-      <!--
-      <dependency>
-        <groupId>org.fcrepo</groupId>
-        <artifactId>axis</artifactId>
-        <version>1.3-PATCHED</version>
-        <exclusions>
-          <exclusion>
-            <groupId>commons-logging</groupId>
-            <artifactId>commons-logging</artifactId>
-          </exclusion>
-          <exclusion>
-            <groupId>wsdl4j</groupId>
-            <artifactId>wsdl4j</artifactId>
-          </exclusion>
-        </exclusions>
-      </dependency>
-      -->
       <dependency>
         <groupId>org.slf4j</groupId>
         <artifactId>slf4j-api</artifactId>
@@ -457,19 +440,14 @@
       </dependency>
       <dependency>
         <groupId>org.apache.cxf</groupId>
-        <artifactId>cxf-rt-frontend-jaxws</artifactId>
+        <artifactId>cxf-bundle</artifactId>
         <version>${cxf.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.apache.cxf</groupId>
-        <artifactId>cxf-rt-transports-http</artifactId>
-        <version>${cxf.version}</version>
-      </dependency>
-      <!-- Jetty is needed if you're using the CXFServlet -->
-      <dependency>
-        <groupId>org.apache.cxf</groupId>
-        <artifactId>cxf-rt-transports-http-jetty</artifactId>
-        <version>${cxf.version}</version>
+        <exclusions>
+          <exclusion>
+            <groupId>commons-logging</groupId>
+            <artifactId>commons-logging</artifactId>
+          </exclusion>
+        </exclusions>
       </dependency>
     </dependencies>
   </dependencyManagement>
