--- a/fcrepo-webapp/fcrepo-webapp-fop/pom.xml
+++ b/fcrepo-webapp/fcrepo-webapp-fop/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>org.fcrepo</groupId>
     <artifactId>fcrepo-webapp</artifactId>
-    <version>3.5</version>
+    <version>3.6-SNAPSHOT</version>
   </parent>
 
   <artifactId>fcrepo-webapp-fop</artifactId>
