--- a/fcrepo-server/pom.xml
+++ b/fcrepo-server/pom.xml
@@ -13,6 +13,17 @@
   <packaging>jar</packaging>
   <name>Fedora Server Library</name>
 
+  <dependencyManagement>
+  	<dependencies>
+  		<dependency>
+  			<groupId>commons-codec</groupId>
+  			<artifactId>commons-codec</artifactId>
+  			<version>20041127.091804</version>
+  			<type>jar</type>
+  			<scope>compile</scope>
+  		</dependency>
+  	</dependencies>
+  </dependencyManagement>
   <properties>
     <demo.src.dir>${basedir}/src/main/resources/demo</demo.src.dir>
     <fedora.home.build.dir>${basedir}/build/home</fedora.home.build.dir>
@@ -384,7 +395,7 @@
     <dependency>
       <groupId>commons-codec</groupId>
       <artifactId>commons-codec</artifactId>
-      <version>1.3</version>
+      <version>1.5</version>
     </dependency>
 
     <dependency>
