--- a/pom.xml
+++ b/pom.xml
@@ -250,7 +250,7 @@
       <dependency>
         <groupId>org.fcrepo</groupId>
         <artifactId>mulgara-core</artifactId>
-        <version>2.1.4</version>
+        <version>2.1.11</version>
         <exclusions>
           <exclusion>
             <groupId>commons-logging</groupId>
@@ -258,6 +258,14 @@
           </exclusion>
         </exclusions>
       </dependency>
+
+    <dependency>
+      <groupId>org.fcrepo</groupId>
+      <artifactId>openrdf-sesame-onejar</artifactId>
+      <version>2.2.1</version>
+    </dependency>
+
+      
       <dependency>
         <groupId>jotm</groupId>
         <artifactId>jotm</artifactId>
@@ -295,7 +303,7 @@
       <dependency>
         <groupId>commons-discovery</groupId>
         <artifactId>commons-discovery</artifactId>
-        <version>0.2</version>
+        <version>0.5</version>
         <exclusions>
           <exclusion>
             <groupId>commons-logging</groupId>
@@ -311,7 +319,7 @@
       <dependency>
         <groupId>org.fcrepo</groupId>
         <artifactId>trippi-core</artifactId>
-        <version>1.5.4</version>
+        <version>1.5.5</version>
         <exclusions>
           <exclusion>
             <groupId>log4j</groupId>
@@ -344,24 +352,24 @@
       <dependency>
         <groupId>org.slf4j</groupId>
         <artifactId>slf4j-api</artifactId>
-        <version>1.5.10</version>
+        <version>1.5.11</version>
       </dependency>
       <dependency>
         <groupId>org.slf4j</groupId>
         <artifactId>jcl-over-slf4j</artifactId>
-        <version>1.5.10</version>
+        <version>1.5.11</version>
         <scope>runtime</scope>
       </dependency>
       <dependency>
         <groupId>org.slf4j</groupId>
         <artifactId>log4j-over-slf4j</artifactId>
-        <version>1.5.10</version>
+        <version>1.5.11</version>
         <scope>runtime</scope>
       </dependency>
       <dependency>
         <groupId>org.slf4j</groupId>
         <artifactId>jul-to-slf4j</artifactId>
-        <version>1.5.10</version>
+        <version>1.5.11</version>
       </dependency>
       <dependency>
         <groupId>ch.qos.logback</groupId>
