--- a/pom.xml
+++ b/pom.xml
@@ -124,10 +124,11 @@
     <abdera.version>1.1.2</abdera.version>
     <activemq.version>5.5.0</activemq.version>
     <axiom.version>1.2.10</axiom.version>
+    <cxf.version>2.4.0</cxf.version>
     <derby.version>10.7.1.1</derby.version>
     <jersey.version>1.0.3.1</jersey.version>
     <spring.version>3.0.5.RELEASE</spring.version>
-    <cxf.version>2.4.0</cxf.version>
+    <trippi.version>1.5.5</trippi.version>
   </properties>
 
   <dependencyManagement>
@@ -299,6 +300,17 @@
           </exclusion>
         </exclusions>
       </dependency>
+	    <dependency>
+	      <groupId>commons-codec</groupId>
+	      <artifactId>commons-codec</artifactId>
+	      <version>1.5</version>
+	        <exclusions>
+	          <exclusion>
+	            <groupId>commons-logging</groupId>
+	            <artifactId>commons-logging</artifactId>
+	          </exclusion>
+	        </exclusions>
+	    </dependency>
       <dependency>
         <groupId>commons-discovery</groupId>
         <artifactId>commons-discovery</artifactId>
@@ -318,7 +330,7 @@
       <dependency>
         <groupId>org.fcrepo</groupId>
         <artifactId>trippi-core</artifactId>
-        <version>1.5.5</version>
+        <version>${trippi.version}</version>
         <exclusions>
           <exclusion>
             <groupId>log4j</groupId>
@@ -327,6 +339,26 @@
         </exclusions>
       </dependency>
       <dependency>
+        <groupId>org.fcrepo</groupId>
+        <artifactId>trippi-mptstore</artifactId>
+        <version>${trippi.version}</version>
+        <exclusions>
+          <exclusion>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+          </exclusion>
+        </exclusions>
+      </dependency>      <dependency>
+        <groupId>org.fcrepo</groupId>
+        <artifactId>trippi-mulgara</artifactId>
+        <version>${trippi.version}</version>
+        <exclusions>
+          <exclusion>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+          </exclusion>
+        </exclusions>
+      </dependency>      <dependency>
         <groupId>org.fcrepo</groupId>
         <artifactId>persistence-api</artifactId>
         <version>1.0.2</version>
@@ -444,11 +476,16 @@
         <version>${cxf.version}</version>
         <exclusions>
           <exclusion>
+            <groupId>org.codehaus.woodstox</groupId>
+            <artifactId>wstx-asl</artifactId>
+          </exclusion>
+          <exclusion>
             <groupId>commons-logging</groupId>
             <artifactId>commons-logging</artifactId>
           </exclusion>
         </exclusions>
       </dependency>
+      
     </dependencies>
   </dependencyManagement>
 
@@ -511,12 +548,18 @@
     </repository>
 
     <repository>
-      <id>apache-snapshots</id>
+      <id>apache-releases</id>
       <name>Apache Release Repository</name>
       <url>https://repository.apache.org/content/groups/public/</url>
       <releases>
         <enabled>true</enabled>
       </releases>
+    </repository>
+
+    <repository>
+      <id>apache-snapshots</id>
+      <name>Apache SNAPSHOT Repository</name>
+      <url>https://repository.apache.org/snapshots/</url>
       <snapshots>
         <enabled>true</enabled>
       </snapshots>
@@ -654,6 +697,19 @@
                   </pluginExecutionFilter>
                   <action>
                     <ignore />
+                  </action>
+                </pluginExecution>
+                <pluginExecution>
+                  <pluginExecutionFilter>
+                    <groupId>org.apache.cxf</groupId>
+                    <artifactId>cxf-codegen-plugin</artifactId>
+                    <versionRange>[2.4.0,)</versionRange>
+                    <goals>
+                      <goal>wsdl2java</goal>
+                    </goals>
+                  </pluginExecutionFilter>
+                  <action>
+                    <execute />
                   </action>
                 </pluginExecution>
               </pluginExecutions>
